Incorrect serialization of global properties into schema was fixed. NPE during index locking was fixed.